<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="hello">Hello World, MainActivity!</string>
<string name="app_name">WhoRU</string>
<string name="spam_feed">http://gaia.telcoware.com:6001/spam_call/query.php?phone_number=</string>
<string name="regi_keyword_list">광고,대출,사기,스팸</string>
<string name="spam_regi_feed">http://gaia.telcoware.com:6001/spam_call/regi.php?spam_number=</string>
<string name="spam_unregi_feed">http://gaia.telcoware.com:6001/spam_call/unregi.php?spam_number=</string>
<string name="member_join_feed">http://gaia.telcoware.com:6001/spam_call/join.php?user_id=</string>
<string name="help_site">http://gaia.telcoware.com:6001/spam_call/help.html</string>
<string name="term_site">http://gaia.telcoware.com:6001/spam_call/term.html</string>

<string name="spam_feed_outter">http://whoru.mokavango.com/spam_call/query.php?phone_number=</string>
<string name="spam_regi_feed_outter">http://whoru.mokavango.com/spam_call/regi.php?spam_number=</string>
<string name="spam_unregi_feed_outter">http://whoru.mokavango.com/spam_call/unregi.php?spam_number=</string>
<string name="member_join_feed_outter">http://whoru.mokavango.com/spam_call/join.php?user_id=</string>
<string name="help_site_outter">http://whoru.mokavango.com/help/help.html</string>
<string name="term_site_outter">http://whoru.mokavango.com/help/term.html</string>

<string name="call_log">착신기록</string>
<string name="call_search">번호검색</string>
<string name="config">환경설정</string>
<string name="service">서비스</string>
<string name="network">네트워크</string>
<string name="reset">모두삭제</string>
<string name="membership">회원등록</string>
<string-array name="network_type">
	<item>Wi-Fi + 3G</item>
	<item>Wi-Fi</item>
</string-array>
<string name="config_preferences">ConfigPrefs</string>
<string name="dev_config_preferences">DevConfigPrefs</string>
<string name="dev_config">사용환경</string>


<string name="are_you_sure">후아유 착신기록이 모두 삭제됩니다. \n계속하시겠습니까 ?</string>
<string name="unknown">알수없음</string>
<string name="call">통화</string>
<string name="spam_level_up">광고지수 Level Up</string>
<string name="spam_level_down">광고지수 Level Down</string>
<string name="remove">착신기록에서 삭제</string>
<string name="move_to_inbox">기본 문자함으로 이동</string>

<string name="select">선택</string>
<string name="direct_input">직접입력</string>
<string name="registration">등록</string>
<string name="yes">예</string>
<string name="no">아니오</string>
<string name="cancel">취소</string>
<string name="spam_regi">광고로 등록</string>
<string name="keyword">키워드</string>

<string name="searching_spam_db">번호 검색중...</string>
<string name="failed_spam_search">데이터베이스 접속 실패</string>
<string name="check_network">네트워크 연결 상태를 확인하십시오.</string>
<string name="spam_keyword"> · 키  워  드:</string>
<string name="firm_name"> · 상  호  명:</string>
<string name="spam_result"> · 검색결과</string>
<string name="spam_level"> · 광고지수:</string>
<string name="level_0">○○○○○</string>
<string name="level_1">◐○○○○</string>
<string name="level_2">●○○○○</string>
<string name="level_3">●◐○○○</string>
<string name="level_4">●●○○○</string>
<string name="level_5">●●◐○○</string>
<string name="level_6">●●●○○</string>
<string name="level_7">●●●◐○</string>
<string name="level_8">●●●●○</string>
<string name="level_9">●●●●◐</string>
<string name="level_10">●●●●●</string>

<string name="member_ok">회원등록을 축하드립니다. \n이제 후아유 서비스를 이용하실 수 있습니다.</string>
<string name="member_already_exist">이미 가입되어 있는 번호입니다. \n후아유 서비스를 이용하실 수 있습니다.</string>
<string name="member_notok">후아유 서비스를 이용하시려면 먼저 회원등록을 해주세요.</string>
<string name="member_na">WhoAreYou service now available in Korea</string>
<string name="search">검색</string>
<string name="search_result">검색결과</string>
<string name="phone_number">전화번호</string>
<string name="not_connected">네트워크 연결 안됨</string>
<string name="cmd_spam_search">SpamSearch</string>
<string name="cmd_spam_level_up">SpamLevelUp</string>
<string name="cmd_spam_level_down">SpamLevelDown</string>
<string name="cmd">Command</string>
<string name="param_number">Number</string>
<string name="param_rowid">RowId</string>
<string name="return_intent">ReturnIntent</string>

<string name="return_intent_call_log_detail">ReturnIntentCallLogDetail</string>
<string name="param_keyword">ParamKeyword</string>
<string name="param_name">ParamName</string>
<string name="param_level">ParamLevel</string>
<string name="param_type">ParamType</string>
<string name="cmd_unknown">CommandUnknown</string>
<string name="cmd_return">CommandReturn</string>
<string name="return_result">ReturnResult</string>
<string name="ok">OK</string>
<string name="phone">전화</string>
<string name="sms">문자</string>
<string name="contributor1">김주현 (Kim Joo Hyun)</string>
<string name="contributor2">최유강 (Choi Yoo Kang)</string>
<string name="contributor3">서대홍 (Seo Dae Hong)</string>
<string name="contributor4">오효식 (Oh Hyo Sik)</string>
<string-array name="level_type"><item>Level 1</item>
<item>Level 2</item>
<item>Level 3</item>
<item>Level 4</item>
<item>Level 5</item>
<item>Level 6</item>
<item>Level 7</item>
<item>Level 8</item>
<item>Level 9</item>
<item>Level 10</item>
</string-array>
<string name="sms_level">SMS 필터지수</string>
<string name="sms_filter_index_term_site">http://gaia.telcoware.com:6001</string>
<string name="sms_filter_index_term_site_outter">http://whoru.mokavango.com/help/policy.html</string>
</resources>
