<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent" 
	android:id="@+id/ConfigScroll">
<LinearLayout android:id="@+id/LinearLayout01"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" android:orientation="vertical" android:scrollbars="vertical">
	
	
	
<LinearLayout android:id="@+id/LinearLayout05" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_margin="10px">
<TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_gravity="center_vertical" android:textStyle="bold" android:textSize="20sp" android:text="@string/service" android:layout_weight="1">
			</TextView><ToggleButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/ServiceOnoffToggle">
			</ToggleButton>
</LinearLayout><LinearLayout android:id="@+id/LinearLayout07" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_margin="10px"><TextView android:id="@+id/TextView02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/network" android:textSize="20sp" android:layout_weight="1" android:textStyle="bold" android:layout_gravity="center_vertical">
			</TextView><Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:entries="@array/network_type" android:id="@+id/NetworkTypeSpinner">
			</Spinner>

</LinearLayout><LinearLayout android:id="@+id/LinearLayout08" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_margin="10px"><TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/call_log" android:textSize="20sp" android:textStyle="bold" android:layout_gravity="left|center_vertical" android:layout_weight="1">
			</TextView>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reset" android:id="@+id/callLogResetButton">
			</Button>
</LinearLayout><LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_margin="10px" android:layout_width="fill_parent">
<TextView android:layout_height="wrap_content" android:text="@string/sms_level" android:layout_gravity="left|center_vertical" android:layout_weight="1" android:layout_width="fill_parent" android:textSize="20sp" android:textStyle="bold" android:id="@+id/SmsFilterIndexText"></TextView><Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:entries="@array/level_type" android:id="@+id/SmsFilterLevelSpinner"></Spinner>

</LinearLayout>
			<AbsoluteLayout android:id="@+id/AbsoluteLayout01" android:layout_width="wrap_content" android:layout_height="20sp"></AbsoluteLayout>
		<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@android:drawable/toast_frame">
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="bottom" android:id="@+id/EasterEgg">
		<TextView android:id="@+id/TextView04" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="제작" android:textSize="14sp" android:textStyle="bold" android:layout_gravity="center" />
		<ImageView android:id="@+id/TextView05" android:src="@drawable/mokavango_logo" android:layout_gravity="center" android:scaleType="fitXY" android:layout_width="116sp" android:layout_height="30sp"/>
		<TextView android:id="@+id/TextView06" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="\n도움말" android:textSize="14sp" android:textStyle="bold" android:layout_gravity="center" />
		<TextView android:id="@+id/HelpLink" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/help_site" android:textSize="14sp" android:textStyle="bold" android:layout_gravity="center" />
	</LinearLayout>
</FrameLayout>
</LinearLayout>
</ScrollView>

